--- a/index.html
+++ b/index.html
@@ -2,34 +2,105 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ファームライフジャパン</title>
-  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0; padding: 0;
+      background-color: #f9faf9;
+      color: #333;
+    }
+    header {
+      background-color: #2a7a2a; /* 深いグリーン */
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    header h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      color: #fff;
+      margin: 0;
+      font-size: 1.8rem;
+    }
+    nav a {
+      color: #d1f0d1;
+      text-decoration: none;
+      margin-left: 24px;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #fff;
+    }
+    .hero {
+      background: url('https://images.unsplash.com/photo-1501004318641-b39e6451bec6?auto=format&fit=crop&w=1350&q=80') no-repeat center/cover;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding-left: 50px;
+      color: white;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+    }
+    .hero h2 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 2.8rem;
+      margin: 0 0 10px 0;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      line-height: 1.4;
+    }
+    /* レスポンシブ対応 */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      nav {
+        margin-top: 10px;
+      }
+      nav a {
+        margin-left: 0;
+        margin-right: 16px;
+      }
+      .hero {
+        height: 250px;
+        padding-left: 20px;
+      }
+      .hero h2 {
+        font-size: 1.8rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>ファームライフジャパン</h1>
     <nav>
-      <a href="index.html">ホーム</a>
-      <a href="products.html">商品一覧</a>
-      <a href="contact.html">お問い合わせ</a>
+      <a href="#products">商品一覧</a>
+      <a href="#about">私たちについて</a>
+      <a href="#contact">お問い合わせ</a>
     </nav>
   </header>
-  <main>
-    <section class="intro">
-      <h2>日本の農業に元気を。</h2>
-      <p>
-        少子高齢化で課題が多く残る日本の農業を少しでも活性化させたいという思いで始めました。
-        地元の農家さんの新鮮な野菜をお届けします！
-      </p>
-      <a class="btn" href="products.html">商品を見る</a>
-    </section>
-    <section class="sns">
-      <a href="https://www.instagram.com/nagaoka.iitoko" target="_blank">Instagramを見る</a>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 ファームライフジャパン</p>
-  </footer>
+
+  <section class="hero">
+    <h2>新鮮な地元の農作物をあなたの食卓へ</h2>
+    <p>少子高齢化で課題が多い日本の農業を応援。地元農家の想いを込めた作物をお届けします。</p>
+  </section>
+
+  <!-- ここから商品や他のセクションを続けていきます -->
+
 </body>
 </html>
+
